crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__struct-2.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile(r#\"\n            struct Foo[T] {\n                a: T,\n                b: []Foo[T]\n            }\n\n            fn main() {}\n            \"#)"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 241830613793639,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 241830613793639,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 265617231543833,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
