crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__struct.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile(r#\"\n            struct Foo {\n                a: I32,\n                b: []Foo\n            }\n\n            fn main() {}\n            \"#)"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 233767353539321,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 233767353539321,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 262391927442095,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
