crates/auryn-compiler/src/auryn/air/snapshots/auryn_compiler__auryn__air__tests__update-2.snap
---
source: crates/auryn-compiler/src/auryn/air/mod.rs
expression: "compile_wrapped(\"let a: I32 = 1\\na += 2\")"
---
(
    Air {
        globals: Globals {
            functions: {
                AirFunctionId(
                    AirStaticValueId(
                        SyntaxId {
                            file_id: Some(
                                FileId(
                                    1,
                                ),
                            ),
                            number: 39406496739491,
                        },
                    ),
                ): AirFunction {
                    type: FunctionItem(
                        TypeId {
                            id: SyntaxId {
                                file_id: Some(
                                    FileId(
                                        1,
                                    ),
                                ),
                                number: 39406496739491,
                            },
                            kind: "auryn_compiler::auryn::air::typecheck::types::FunctionItemType",
                        },
                    ),
                    ident: "main",
                    blocks: {
                        AirBlockId(
                            0,
                        ): AirBlock {
                            nodes: [
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 90071992547408,
                                    },
                                    kind: Assignment(
                                        Assignment {
                                            target: AirLocalValueId(
                                                0,
                                            ),
                                            expected_type: Some(
                                                Application {
                                                    id: SyntaxId {
                                                        file_id: Some(
                                                            FileId(
                                                                1,
                                                            ),
                                                        ),
                                                        number: 129478489286899,
                                                    },
                                                    type: Path {
                                                        base_id: SyntaxId {
                                                            file_id: Some(
                                                                FileId(
                                                                    1,
                                                                ),
                                                            ),
                                                            number: 140737488355325,
                                                        },
                                                        base: Resolved(
                                                            I32,
                                                        ),
                                                        segments: [],
                                                    },
                                                    generic_arguments: [],
                                                },
                                            ),
                                            expression: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 174514485560603,
                                                },
                                                type: Computed(
                                                    I32,
                                                ),
                                                kind: Constant(
                                                    Number(
                                                        1,
                                                    ),
                                                ),
                                            },
                                        },
                                    ),
                                },
                                AirNode {
                                    id: SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 197032483697455,
                                    },
                                    kind: Update(
                                        Update {
                                            target: AirPlace {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 202661983231668,
                                                },
                                                type: Computed(
                                                    I32,
                                                ),
                                                kind: Variable(
                                                    AirLocalValueId(
                                                        0,
                                                    ),
                                                ),
                                            },
                                            operator: PlusAssign,
                                            expression: AirExpression {
                                                id: SyntaxId {
                                                    file_id: Some(
                                                        FileId(
                                                            1,
                                                        ),
                                                    ),
                                                    number: 258956978573798,
                                                },
                                                type: Computed(
                                                    I32,
                                                ),
                                                kind: Constant(
                                                    Number(
                                                        2,
                                                    ),
                                                ),
                                            },
                                        },
                                    ),
                                },
                            ],
                            finalizer: Return(
                                Null(
                                    SyntaxId {
                                        file_id: Some(
                                            FileId(
                                                1,
                                            ),
                                        ),
                                        number: 78812993478982,
                                    },
                                ),
                            ),
                        },
                    },
                },
            },
        },
        ty_ctx: TypeContext { .. },
    },
    Diagnostics {
        diagnostics: [],
    },
)
